Update Pop Up .html
file up to date

--- a/first/E-Project/Pop Up .html
+++ b/first/E-Project/Pop Up .html
@@ -53,7 +53,7 @@
     <div class="card" style="width: 18rem;">
         <img src="pictures/Barbie cake.jfif" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Barbie Cake</h5>
+            <h5 class="card-title"></h5>
             <p class="card-text">This Barbie cake design is nothing new. It has been around for quite some time. Also
                 known as a Barbie Dress Cake. </p>
         </div>
